syntax = "proto3";

import "zitadel/object.proto";

package zitadel.user.v1;

option go_package ="github.com/caos/zitadel/pkg/grpc/user";

message User {
    string id = 1;
    zitadel.v1.ObjectDetails details = 2;
    UserState state = 3;
    string user_name = 4;
    repeated string login_names = 5;
    string preferred_login_name = 6;
    oneof type {
        Human human = 7;
        Machine machine = 8;
    }
}

enum UserState {
    USER_STATE_UNSPECIFIED = 0;
    USER_STATE_ACTIVE = 1;
    USER_STATE_INACTIVE = 2;
    USER_STATE_DELETED = 3;
    USER_STATE_LOCKED = 4;
    USER_STATE_SUSPEND = 5;
    USER_STATE_INITIAL = 6;
}

message Human {
    Profile profile = 1;
    Email email = 2;
    Phone phone = 3;
    Address address = 4;
}

message Machine {
    string name = 1;
    string description = 2;
}

message Profile {
    string first_name = 1;
    string last_name = 2;
    string nick_name = 3;
    string display_name = 4;
    string preferred_language = 5;
    Gender gender = 6;
}

message Email {
    string email = 1;
    bool is_email_verified = 2;
}

message Phone {
    //TODO: use https://github.com/google/libphonenumber/blob/master/resources/phonenumber.proto
    string phone = 1;
    bool is_phone_verified = 2;
}

message Address {
    string country = 1;
    string locality = 2;
    string postal_code = 3;
    string region = 4;
    string street_address = 5;
}

enum Gender {
    GENDER_UNSPECIFIED = 0;
    GENDER_FEMALE = 1;
    GENDER_MALE = 2;
    GENDER_DIVERSE = 3;
}

message SearchQuery {
    oneof query {
        UserNameQuery user_name = 1;
        FirstNameQuery first_name = 2;
        LastNameQuery last_name = 3;
        NickNameQuery nick_name = 4;
        DisplayNameQuery display_name = 5;
        EmailQuery email = 6;
        StateQuery state = 7;
        TypeQuery type = 8;
    }
}

message UserNameQuery {
    string user_name = 1;//TODO: validate
    zitadel.v1.TextQueryMethod method = 2;//TODO: validate
}

message FirstNameQuery {
    string first_name = 1;//TODO: validate
    zitadel.v1.TextQueryMethod method = 2;//TODO: validate
}

message LastNameQuery {
    string last_name = 1;//TODO: validate
    zitadel.v1.TextQueryMethod method = 2;//TODO: validate
}

message NickNameQuery {
    string nick_name = 1;//TODO: validate
    zitadel.v1.TextQueryMethod method = 2;//TODO: validate
}

message DisplayNameQuery {
    string display_name = 1;//TODO: validate
    zitadel.v1.TextQueryMethod method = 2;//TODO: validate
}

message EmailQuery {
    string email_address = 1; //TODO: validate
    zitadel.v1.TextQueryMethod method = 2;//TODO: validate
}

//UserStateQuery is always equals
message StateQuery {
    UserState state = 1; //TODO: validate
}

//UserTypeQuery is always equals
message TypeQuery {
    Type type = 1; //TODO: validate
}

enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_HUMAN = 1;
    TYPE_MACHINE = 2;
}

enum UserFieldName {
    USERFIELDNAME_UNSPECIFIED = 0;
    USERFIELDNAME_USER_NAME = 1;
    USERFIELDNAME_FIRST_NAME = 2;
    USERFIELDNAME_LAST_NAME = 3;
    USERFIELDNAME_NICK_NAME = 4;
    USERFIELDNAME_DISPLAY_NAME = 5;
    USERFIELDNAME_EMAIL = 6;
    USERFIELDNAME_STATE = 7;
    USERFIELDNAME_TYPE = 8;
}

message MultiFactor {
    MultiFactorState state = 1;
    oneof type {
        MultiFactorOTP otp = 2;
        MultiFactorU2F u2f = 3;
    }
    //TODO: should it contain objectdetails?
}

enum MultiFactorState {
    MultiFactor_STATE_UNSPECIFIED = 0;
    MultiFactor_STATE_NOT_READY = 1;
    MultiFactor_STATE_READY = 2;
    MultiFactor_STATE_REMOVED = 3;
}

enum MultiFactorType {
    MULTI_FACTOR_TYPE_UNSPECIFIED = 0;
    MULTI_FACTOR_TYPE_OTP = 1;
    MULTI_FACTOR_TYPE_U2F = 2;
}

message MultiFactorOTP {}

message MultiFactorU2F {
    string id = 1;
    string name = 2;
}

message WebAuthNKey {
    string id = 1;
    bytes public_key = 2;
}

message WebAuthNVerification {
    bytes public_key_credential = 1;
    string token_name = 2;
}

message WebAuthNToken {
    string id = 1;
    MultiFactorState state = 2;
    string name = 3;
}

message Membership {
    string user_id = 1;
    zitadel.v1.ObjectDetails details = 2; //TODO: needed?
    repeated string roles = 3;
    string display_name = 4;
    oneof type {
        string org_id = 5;
        string project_id = 6;
        string project_grant_id = 7;
    }
}

message MembershipQuery {
    oneof query {
        MembershipOrgQuery org = 1;
        MembershipProjectQuery project = 2;
        MembershipProjectGrantQuery project_grant = 3;
    }
}

message MembershipOrgQuery {
    string org_id = 1;
}

message MembershipProjectQuery {
    string project_id = 1;
}

message MembershipProjectGrantQuery {
    string project_grant_id = 1;
}

message Session {
    string session_id = 1;
    string agent_id = 2;
    SessionState auth_state = 3;
    string user_id = 4;
    string user_name = 5;
    string login_name = 7;
    string display_name = 8;
    zitadel.v1.ObjectDetails details = 9;
}

enum SessionState {
    SESSION_STATE_UNSPECIFIED = 0;
    SESSION_STATE_ACTIVE = 1;
    SESSION_STATE_TERMINATED = 2;
}

message UserGrant {
    string org_id = 1;
    string project_id = 2;
    string user_id = 3;
    repeated string roles = 4;
    string org_name = 5;
    string grant_id = 6;
}

message UserGrantQuery {
    oneof query {
        UserGrantProjectIDQuery project_id = 1;
        UserGrantOrgIDQuery org_id = 2;
    }
}

message UserGrantProjectIDQuery {
    string project_id = 1;
}

message UserGrantOrgIDQuery {
    string org_id = 1;
}